# system-controller

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
benches/: performance.rs
docs/: API.md  ARCHITECTURE.md  PROJECT_PLAN.md  SECURITY.md  SETUP.md  TESTING_STRATEGY.md
examples/: README.md  basic-client.py  websocket-client.js
examples/websocket-client/: README.md  client.js  package-lock.json  package.json  simple-test.js  test-tcp.js
examples/websocket-client/config/: default.json
examples/websocket-client/lib/: SystemControllerClient.js  TcpSystemControllerClient.js
src/: lib.rs  main.rs
src/platform/: cross_platform.rs  enigo_platform.rs  factory.rs  headless.rs  mock.rs  mod.rs  optimizations.rs  optimized_controller.rs  traits.rs
src/protocol/: messages.rs
src/security/: audit.rs  auth.rs  encryption.rs  mod.rs  permissions.rs
src/server/: display.rs  enhanced_display.rs  input.rs  mod.rs  network.rs  network_complex.rs  network_protocol.rs  system_integration.rs
tests/: cross_platform_tests.rs  display_tests.rs  enigo_platform_tests.rs  headless_platform_tests.rs  input_integration_tests.rs  input_property_tests.rs  input_unit_tests.rs  network_server_tests.rs  protocol_tests.rs  security_tests.rs
tests/fixtures/: mock_displays.json  sample_commands.json
tests/unit/platform/: mock_platform_test.rs
tests/unit/server/: input_test.rs
